<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_or_lcc">99%的人都忘记看的智能驾驶指南。</string>
    <string name="acc_or_lcc_contents">仅需一分钟，避免99%的事故.</string>
    <string name="ap_cancel_page_view_hold_brake_hint">请立即刹车</string>
    <string name="ap_cancel_page_view_take_over_hint">请立即接管</string>
    <string name="ap_cancel_tips_tv">记忆泊车已退出\n请立即接管</string>
    <string name="ap_crossing_tips_105">注意安全</string>
    <string name="ap_crossing_tips_text">路口请注意</string>
    <string name="ap_finish_message_text">每次到达起点，一键载你回来</string>
    <string name="ap_finish_page_learn_btn_text">学习召唤路线</string>
    <string name="ap_finish_success_distance_pre_text">本次学习总里程</string>
    <string name="ap_finish_success_distance_unit_text">米</string>
    <string name="ap_finish_success_spd_num_pre_text">识别到</string>
    <string name="ap_finish_success_spd_num_unit_text">减速带</string>
    <string name="ap_finish_title_text">记忆泊车成功！</string>
    <string name="ap_first_page_sub_title">达到目的地附近，开始寻找可泊车位</string>
    <string name="ap_first_page_title">前往【%1$s】附近的车位</string>
    <string name="ap_first_page_title_other">鹏友推荐的记忆路线</string>
    <string name="ap_founded_park_lot_arrive_favorite">已经到终点了，不能帮你继续往前找了</string>
    <string name="ap_founded_park_lot_no_accelerator">不要踩加速踏板哦，想前进可点击继续找车位</string>
    <string name="ap_info_board_view_distance_left">距离车位</string>
    <string name="ap_info_board_view_location_park">地库</string>
    <string name="ap_info_board_view_passing_car">避让车辆</string>
    <string name="ap_info_board_view_round_people_left">避让行人</string>
    <string name="ap_info_board_view_unit">次</string>
    <string name="ap_ready_training_learn_tips">倒车中，请注意周围环境安全</string>
    <string name="ap_searching_finish_title_text">沿途泊入成功！</string>
    <string name="apa_off_hint">请开启超级智能辅助泊车开关</string>
    <string name="app_name">Autopilot</string>
    <string name="auto_park_failure">泊车失败？</string>
    <string name="auto_park_failure_contens">因为你没有看这本秘籍？</string>
    <string name="auto_park_success">下次试试遥控泊车？</string>
    <string name="auto_park_success_contents">学好这一招让Ta大吃一惊.</string>
    <string name="automatic_learning_available_title">记忆泊车路线已规划，请确认</string>
    <string name="automatic_learning_available_tts">已为您规划记忆泊车路线，请点击好的确认路线</string>
    <string name="automatic_learning_update_title">找到了新的泊车路线，请确认</string>
    <string name="automatic_learning_update_tts">找到新的泊车路线，请点击好的确认路线</string>
    <string name="back_pressed_error">为了你的驾驶安全，当前不支持退出</string>
    <string name="camera_media_crash_tip">影像有延迟，请等候</string>
    <string name="cancel_park">取消</string>
    <string name="cancel_park_out">取消</string>
    <string name="cancel_training">取消学习</string>
    <string name="cancel_training_cancel">继续学习</string>
    <string name="cancel_training_confirm">取消学习</string>
    <string name="cancel_training_dialog_message">取消学习将清除已学习路线</string>
    <string name="card_sr_title_takeover">记忆泊⻋车即将退出</string>
    <string name="card_title_sr_ing">记忆泊车工作中...</string>
    <string name="cm"> cm</string>
    <string name="confirm_training_cancel">取消学习</string>
    <string name="confirm_training_confirm">确认学习</string>
    <string name="confirm_training_dialog_message">新路线学习成功后将覆盖原有路线，确定要重新学习吗？</string>
    <string name="continue_ap">恢复记忆泊车</string>
    <string name="continue_park">继续</string>
    <string name="continue_park_out">继续</string>
    <string name="dialog_comment_negative_btn_text">踩</string>
    <string name="dialog_comment_negative_toast_text">感谢评价！下次将不在推荐该路线</string>
    <string name="dialog_comment_positive_btn_text">赞</string>
    <string name="dialog_comment_positive_toast_text">感谢评价！我们将多多推荐好评路线</string>
    <string name="dialog_comment_title">评价路线</string>
    <string name="dialog_comment_tv1_text">评价路线，帮助大家筛选出更好的路线</string>
    <string name="dialog_comment_tv2_text">赞：按这条路线可以轻松找到目的地 \n踩：这条路线没有帮到我</string>
    <string name="dialog_comment_tv3_text">努力上传中，分享成功后将进行路线审核，可在手机端查看路线状态，审核通过后将获得积分奖励。</string>
    <string name="dialog_end_btn_text">我知道了</string>
    <string name="dialog_end_dialog_title">分享完成</string>
    <string name="dialog_end_tts">分享完成，后续请在小鹏APP查看路线状态</string>
    <string name="dialog_end_tv_text">路线审核需要一段时间</string>
    <string name="dialog_end_tv_text1">请后续在小鹏APP中查看路线状态</string>
    <string name="dialog_select_floor_negative_btn_text">取消</string>
    <string name="dialog_select_floor_positive_btn_text">确认</string>
    <string name="dialog_select_pos_negative_btn_text">取消</string>
    <string name="dialog_select_pos_positive_btn_text">确认</string>
    <string name="dialog_select_pos_tv_text">请至少选择1个车位附近的信息</string>
    <string name="dialog_share_map_bt_floor_text">点击选择</string>
    <string name="dialog_share_map_bt_pos_text">点击选择</string>
    <string name="dialog_share_map_commit_btn_text">立即分享</string>
    <string name="dialog_share_map_tv_floor_text">当前车位所在楼层</string>
    <string name="dialog_share_map_tv_pos_text">当前车位附近信息</string>
    <string name="dialog_share_map_tv_text">填写路线信息并上传，和鹏友分享停车场路线，成为这条路线的\"所有者\"</string>
    <string name="dialog_user_agreement_cb_tv_text">我已经阅读并同意隐私协议</string>
    <string name="dialog_user_agreement_dialog_title">隐私协议</string>
    <string name="dialog_user_agreement_negative_btn_text">取消</string>
    <string name="dialog_user_agreement_positive_btn_text">确认</string>
    <string name="dialog_user_agreement_tv_text">分享路线是指将您的车辆所创建的路线与其他小鹏车主分享使用。在获得您的授权后，我们将对您的路线进行分享， 分享信息包括所创建的路线及路线终点标识。其他小鹏车主在获取您的路线后，将按照您所创建的路线行驶并完成泊车。 \n请您仔细阅读并同意隐私协议后，点击确认，开始分享路线。</string>
    <string name="distance_left_back">向后还需行驶  </string>
    <string name="distance_left_front">向前还需行驶  </string>
    <string name="distance_pre">继续行驶</string>
    <string name="distance_pre_b0">向前行驶</string>
    <string name="distance_unit_m"> m</string>
    <string name="favorite_park_contents">到达常用车位附近，是否打开车位搜索!</string>
    <string name="favorite_park_title">发现常用车位</string>
    <string name="finish_distance">已学习</string>
    <string name="finish_distance_unit">米 I</string>
    <string name="finish_training">完成学习</string>
    <string name="finish_training_with_p">请先挂入 P 挡</string>
    <string name="finished_distance">这次路线学会了</string>
    <string name="finished_distance_unit">米</string>
    <string name="forward_parking">车头泊入</string>
    <string name="forward_parking_false">车尾\n泊入</string>
    <string name="forward_parking_true">车头\n泊入</string>
    <string name="h5_parking_help">教程</string>
    <string name="hotarea_unclickable_tips_19">请往前开，尚未发现可用车位</string>
    <string name="ignore_park">忽略</string>
    <string name="learning_summon_title">来解锁你的车辆召唤路线吧</string>
    <string name="left_lis">左收听</string>
    <string name="lis">收听</string>
    <string name="log_already_upload">日志已经上传</string>
    <string name="memory_parking_activated_share_title">已进入记忆泊车可用区域 \n可前往【%1$s】附近车位</string>
    <string name="memory_parking_activated_share_title_other">鹏友推荐了一条记忆路线，\n要使用吗？</string>
    <string name="memory_parking_activated_share_tts">有到%1$s附近的记忆路线，点击好的即可使用</string>
    <string name="memory_parking_activated_share_tts_other">鹏友推荐了一条记忆路线，点击好的即可使用</string>
    <string name="memory_parking_activated_title">已进入记忆泊车可用区域</string>
    <string name="memory_parking_activated_tts">记忆泊车已就绪，点击好的即可开始</string>
    <string name="memory_parking_share_dialog_title">分享路线</string>
    <string name="memory_parking_share_type_charging_pie">充电桩</string>
    <string name="memory_parking_share_type_elevator">电梯口</string>
    <string name="memory_parking_share_type_other">其他</string>
    <string name="memory_parking_share_type_stair">楼宇入口</string>
    <string name="nav_exit_content">退出当前页面会关闭引导，是否确定退出？</string>
    <string name="nav_exit_title">退出起点引导</string>
    <string name="nav_fail_tips">起点引导已退出</string>
    <string name="nav_fail_tips_missed">未按提示行驶，引导已退出</string>
    <string name="nav_guide_dialog_tts">请确认注意事项后点击开始</string>
    <string name="nav_guide_infoflow_to_other_addr">鹏友推荐了记忆路线，可按引导前往路线起点</string>
    <string name="nav_guide_infoflow_to_specific_addr">有到「%s」附近的记忆路线，可按引导前往路线起点</string>
    <string name="nav_guide_instruction_spliter">米</string>
    <string name="nav_guide_instruction_spliter_prefix">前方</string>
    <string name="nav_guide_left_distance">距离起点</string>
    <string name="nav_guide_start_point_instruction">请按引导全程手动驾驶前往记忆泊车路线起点。建议车速小于15km/h，特别是经过路口、坡道时，以免偏离路线</string>
    <string name="nav_guide_startpoint_almost_reached">即将到达路线起点</string>
    <string name="nav_guide_startpoint_distance_tip">剩余距离 %d 米</string>
    <string name="nav_guide_startpoint_distance_tip_2">%d m</string>
    <string name="nav_guide_top_sub_title_instruction">请按路线指引驾驶车辆</string>
    <string name="nav_left_turn_in_ramp_tts">驶出坡道后左转</string>
    <string name="nav_main_title">驾驶前往记忆泊车路线起点</string>
    <string name="nav_right_turn_in_ramp_tts">驶出坡道后右转</string>
    <string name="nav_start_notification_other_tts">鹏友推荐了记忆路线，点击好的开始起点引导</string>
    <string name="nav_start_notification_specific_addr_tts">有到「%s」附近的记忆路线，点击好的开始起点引导</string>
    <string name="nav_start_point_guide_sub_title">保持慢行,避免错过指引提示</string>
    <string name="nav_start_point_instruction_ok_btn">开始引导</string>
    <string name="nav_start_point_instruction_title">确认注意事项后再点击开始</string>
    <string name="nav_start_tips">起点引导开始</string>
    <string name="nav_sub_title">到达可用位置，查看路线信息并开始记忆泊车</string>
    <string name="nedc_close_dialog_confirm">知道了</string>
    <string name="nedc_close_tip">\n\n低耗省电模式开启，无法智能辅助泊车\n如需使用，请前往 车控车设- 辅助驾驶 中设置，关闭低耗省电模式</string>
    <string name="park_start_tts">好的</string>
    <string name="parking_ap_can_not_change_search_with_tips_84">已到达终点，要不就停在这里吧</string>
    <string name="parking_ap_pass_ramp_tips_72">坡道行驶中</string>
    <string name="start_parking">开始泊入车位</string>
    <string name="training_ap_first_spd_num_unit">个</string>
    <string name="training_doing">路线记忆中</string>
    <string name="training_info_board_view_distance_left">学习距离</string>
    <string name="training_info_board_view_location_text">地库</string>
    <string name="training_info_board_view_ramp_left">坡道</string>
    <string name="training_info_board_view_spd_num_left">减速带</string>
    <string name="training_info_board_view_spd_num_unit">条</string>
    <string name="training_select_park_lots">请踩住刹车，点击开始</string>
</resources>