<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/dialog_share_map_layout" android:layout_width="680dp" android:layout_height="760dp">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="160dp">
        <com.xiaopeng.xui.widget.XImageButton android:id="@+id/dialog_share_title_bt_close" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginLeft="14dp" android:layout_marginTop="14dp" android:src="@drawable/x_ic_small_close" android:scaleType="center" style="@style/XButton.Icon.XSmall"/>
        <com.xiaopeng.xui.widget.XImageButton android:id="@+id/dialog_share_title_bt_back" android:visibility="gone" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginLeft="14dp" android:layout_marginTop="14dp" android:src="@drawable/x_ic_small_back" android:scaleType="center" style="@style/XButton.Icon.XSmall"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="36sp" android:textColor="#0f1520" android:gravity="center_horizontal" android:id="@+id/dialog_share_title_tv" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="32dp"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="600dp">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/dialog_share_user_agreement_layout" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_user_agreement_tv" android:scrollbars="none" android:layout_width="532dp" android:layout_height="336dp" android:text="@string/dialog_user_agreement_tv_text" android:lineSpacingExtra="16dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="90dp" android:layout_marginTop="14dp">
                <com.xiaopeng.xui.widget.XCheckBox android:id="@+id/dialog_user_agreement_cb" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginStart="29dp"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_user_agreement_cb_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_user_agreement_cb_tv_text"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="90dp" android:layout_marginTop="62dp">
                <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_dialog_btn_positive_color_selector" android:gravity="center" android:id="@+id/dialog_user_agreement_positive_btn" android:background="@drawable/x_dialog_btn_positive_selector" android:layout_width="324dp" android:layout_height="match_parent" android:text="@string/dialog_user_agreement_positive_btn_text" android:layout_marginStart="8dp"/>
                <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_dialog_btn_negative_color_selector" android:gravity="center" android:id="@+id/dialog_user_agreement_negative_btn" android:background="@drawable/x_dialog_btn_negative_selector" android:layout_width="324dp" android:layout_height="match_parent" android:text="@string/dialog_user_agreement_negative_btn_text" android:layout_marginStart="16dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/dialog_share_layout" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:layout_gravity="center_horizontal" android:id="@+id/dialog_share_map_tv" android:scrollbars="none" android:layout_width="512dp" android:layout_height="84dp" android:layout_marginTop="0dp" android:maxHeight="300dp" android:text="@string/dialog_share_map_tv_text"/>
            <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="30dp">
                <com.xiaopeng.xui.widget.XImageView android:id="@+id/dialog_share_map_iv_floor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="80dp"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_share_map_tv_floor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:text="@string/dialog_share_map_tv_floor_text"/>
            </LinearLayout>
            <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:gravity="center_vertical" android:id="@+id/dialog_share_map_bt_floor" android:background="@drawable/x_search_bar_edit_bg" android:paddingLeft="50dp" android:paddingRight="30dp" android:layout_width="516dp" android:layout_height="72dp" android:layout_marginLeft="80dp" android:layout_marginTop="18dp" android:text="@string/dialog_share_map_bt_pos_text"/>
            <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="60dp" android:layout_marginTop="36dp">
                <com.xiaopeng.xui.widget.XImageView android:id="@+id/dialog_share_map_iv_pos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="80dp"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_share_map_tv_pos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:text="@string/dialog_share_map_tv_pos_text"/>
            </LinearLayout>
            <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:gravity="center_vertical" android:id="@+id/dialog_share_map_bt_pos" android:background="@drawable/x_search_bar_edit_bg" android:paddingLeft="50dp" android:paddingRight="30dp" android:layout_width="516dp" android:layout_height="72dp" android:layout_marginLeft="80dp" android:layout_marginTop="18dp" android:text="@string/dialog_share_map_bt_pos_text"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="33sp" android:textColor="@color/x_dialog_btn_positive_color_selector" android:gravity="center" android:id="@+id/dialog_share_map_commit_btn" android:background="@drawable/x_dialog_btn_positive_selector" android:layout_width="665dp" android:layout_height="90dp" android:layout_marginLeft="8dp" android:layout_marginTop="52dp" android:text="@string/dialog_share_map_commit_btn_text"/>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/dialog_share_floor_select_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.xiaopeng.xui.widget.XNumberPicker android:id="@+id/dialog_select_floor_picker" android:layout_width="match_parent" android:layout_height="450dp"/>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="52dp">
                <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_dialog_btn_positive_color_selector" android:gravity="center" android:id="@+id/dialog_select_floor_positive_btn" android:background="@drawable/x_dialog_btn_positive_selector" android:layout_width="665dp" android:layout_height="90dp" android:text="@string/dialog_select_floor_positive_btn_text"/>
                <com.xiaopeng.xui.widget.XButton android:textSize="35sp" android:textColor="@color/x_dialog_btn_negative_color_selector" android:gravity="center" android:id="@+id/dialog_select_floor_negative_btn" android:background="@drawable/x_dialog_btn_negative_selector" android:paddingLeft="20dp" android:paddingRight="20dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="80dp" android:text="@string/dialog_select_floor_negative_btn_text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/dialog_share_pos_select_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:gravity="center" android:id="@+id/dialog_select_pos_other_tv" android:layout_width="match_parent" android:layout_height="42dp" android:text="@string/dialog_select_pos_tv_text"/>
            <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="89dp">
                <com.xiaopeng.xui.widget.XCheckBox android:textSize="29sp" android:textColor="@color/x_icon_color_selector" android:id="@+id/dialog_select_pos_charging_pie_ct" android:layout_width="224dp" android:layout_height="90dp" android:text="@string/memory_parking_share_type_charging_pie"/>
                <com.xiaopeng.xui.widget.XCheckBox android:textSize="29sp" android:textColor="@color/x_icon_color_selector" android:id="@+id/dialog_select_pos_elevator_ct" android:layout_width="224dp" android:layout_height="90dp" android:layout_marginLeft="40dp" android:text="@string/memory_parking_share_type_elevator"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="34dp">
                <com.xiaopeng.xui.widget.XCheckBox android:textSize="29sp" android:textColor="@color/x_icon_color_selector" android:id="@+id/dialog_select_pos_stair_ct" android:layout_width="224dp" android:layout_height="90dp" android:text="@string/memory_parking_share_type_stair"/>
                <com.xiaopeng.xui.widget.XCheckBox android:textSize="29sp" android:textColor="@color/x_icon_color_selector" android:id="@+id/dialog_select_pos_other_ct" android:layout_width="224dp" android:layout_height="90dp" android:layout_marginLeft="40dp" android:text="@string/memory_parking_share_type_other"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="157dp">
                <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_dialog_btn_positive_color_selector" android:gravity="center" android:id="@+id/dialog_select_pos_positive_btn" android:background="@drawable/x_dialog_btn_positive_selector" android:layout_width="665dp" android:layout_height="90dp" android:text="@string/dialog_select_pos_positive_btn_text"/>
                <com.xiaopeng.xui.widget.XButton android:textSize="35sp" android:textColor="@color/x_dialog_btn_negative_color_selector" android:gravity="center" android:id="@+id/dialog_select_pos_negative_btn" android:background="@drawable/x_dialog_btn_negative_selector" android:paddingLeft="20dp" android:paddingRight="20dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="80dp" android:text="@string/dialog_select_pos_negative_btn_text" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/dialog_end_layout" android:layout_width="match_parent" android:layout_height="match_parent">
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/dialog_commit_end_iv" android:layout_width="wrap_content" android:layout_height="293dp" android:layout_marginLeft="30dp"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_end_tv" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="42dp" android:text="@string/dialog_end_tv_text"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="26sp" android:textColor="#0f1520" android:id="@+id/dialog_end_tv1" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="42dp" android:layout_marginTop="6dp" android:text="@string/dialog_end_tv_text1"/>
            <com.xiaopeng.xui.widget.XButton android:textSize="28sp" android:textColor="@color/x_dialog_btn_positive_color_selector" android:gravity="center" android:id="@+id/dialog_end_btn" android:background="@drawable/x_dialog_btn_positive_selector" android:layout_width="665dp" android:layout_height="90dp" android:layout_marginTop="119dp" android:text="@string/dialog_end_btn_text"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
