<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/pro_training_view_ib_close" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginTop="44dp" android:src="@drawable/x_ic_small_back" android:scaleType="center" android:layout_marginStart="20dp" android:layout_alignParentStart="true" style="@style/XButton.Icon.XSmall"/>
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/training_btn_control_layout" android:background="@mipmap/ic_training_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_toRightOf="@+id/pro_training_view_ib_close">
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/training_control_icon" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="52dp" android:src="@mipmap/ic_training_icon"/>
        <com.xiaopeng.xui.widget.XProgressBar android:id="@+id/training_saving_progress" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginLeft="52dp" android:indeterminateDrawable="@drawable/training_x_circular_progress_progress_drawable" style="@style/XProgressBar.Circular.Medium"/>
        <TextView android:textSize="26sp" android:id="@+id/training_control_title" android:layout_width="wrap_content" android:layout_height="35dp" android:layout_marginLeft="102dp" android:layout_marginTop="3dp" android:text="@string/training_doing"/>
        <TextView android:textSize="28sp" android:gravity="center" android:id="@+id/training_tv_parking_b" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="247dp" android:layout_marginTop="154dp" android:text="@string/training_select_park_lots" android:lineSpacingExtra="0dp"/>
    </RelativeLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@+id/training_parking_distance_container" android:visibility="gone" android:layout_width="310dp" android:layout_height="52dp" android:layout_marginLeft="444dp" android:layout_marginTop="62dp">
        <TextView android:textSize="38dp" android:id="@+id/training_parking_left_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/distance_pre"/>
        <TextView android:textSize="38dp" android:id="@+id/training_parking_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="80"/>
        <TextView android:textSize="38dp" android:id="@+id/training_distance_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cm"/>
    </LinearLayout>
    <ImageView android:id="@+id/training_iv_gear" android:visibility="gone" android:layout_width="48dp" android:layout_height="48dp" android:layout_marginLeft="381dp" android:layout_marginTop="64dp"/>
    <com.xiaopeng.xui.widget.XCircularProgressBar android:id="@+id/training_parking_b_progress" android:visibility="gone" android:layout_width="52dp" android:layout_height="52dp" android:layout_marginLeft="378dp" android:layout_marginTop="62dp" android:indeterminate="false" app:progress_enableIndicator="false" app:progress_light_radius="5dp" app:progress_strokeWidth="5dp" style="@style/XProgressBar.Circular.Medium"/>
    <com.xiaopeng.xui.widget.XImageView android:id="@+id/ic_training_parking_b_image" android:visibility="gone" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginTop="64dp" android:src="@mipmap/ic_parking_b" android:scaleType="center" android:layout_marginStart="64dp"/>
    <com.xiaopeng.xui.widget.XButton android:textSize="26sp" android:gravity="center" android:id="@+id/training_btn_parking_control" android:background="@drawable/auto_btn_real_positive_selector" android:visibility="gone" android:layout_width="210dp" android:layout_height="72dp" android:layout_marginTop="43dp" android:text="@string/start_parking" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="29sp" android:gravity="center" android:id="@+id/training_tv_tip" android:layout_width="544dp" android:layout_height="wrap_content" android:layout_marginTop="59dp" android:layout_centerHorizontal="true" android:lineSpacingExtra="0dp"/>
    <RelativeLayout android:id="@+id/parking_training_distance_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="47dp" android:layout_marginBottom="100dp" android:layout_alignParentBottom="true">
        <ImageView android:id="@+id/training_distance_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60dp"/>
        <TextView android:textSize="22sp" android:gravity="center" android:id="@+id/training_tv_distance_pre" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="63dp" android:layout_marginTop="87dp" android:text="@string/training_info_board_view_distance_left" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="45sp" android:gravity="center" android:id="@+id/training_tv_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="207dp" android:layout_marginTop="70dp" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="26sp" android:gravity="center" android:id="@+id/training_tv_distance_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:layout_marginTop="90dp" android:text="@string/ap_finish_success_distance_unit_text" android:layout_toRightOf="@+id/training_tv_distance" android:lineSpacingExtra="0dp"/>
        <ImageView android:id="@+id/training_spd_num_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="346dp" android:layout_marginTop="60dp"/>
        <TextView android:textSize="22sp" android:gravity="center" android:id="@+id/training_tv_spd_num_pre" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="422.1953dp" android:layout_marginTop="85dp" android:text="@string/training_info_board_view_spd_num_left" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="45sp" android:gravity="center" android:id="@+id/training_tv_spd_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="557dp" android:layout_marginTop="70dp" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="26sp" android:gravity="center" android:id="@+id/training_tv_spd_num_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:layout_marginTop="90dp" android:text="@string/training_info_board_view_spd_num_unit" android:layout_toRightOf="@+id/training_tv_spd_num" android:lineSpacingExtra="0dp"/>
        <ImageView android:id="@+id/training_location_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="666dp" android:layout_marginTop="60dp"/>
        <TextView android:textSize="24sp" android:gravity="center" android:id="@+id/training_tv_location_pre" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="753.5938dp" android:layout_marginTop="85dp" android:text="@string/training_info_board_view_ramp_left" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="45sp" android:gravity="center" android:id="@+id/training_tv_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="77dp" android:layout_marginTop="70dp" android:text="@string/training_info_board_view_location_text" android:layout_toRightOf="@+id/training_tv_location_pre" android:lineSpacingExtra="0dp"/>
        <TextView android:textSize="26sp" android:gravity="center" android:id="@+id/training_tv_location_num_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14dp" android:layout_marginTop="90dp" android:text="@string/training_ap_first_spd_num_unit" android:layout_toRightOf="@+id/training_tv_location" android:lineSpacingExtra="0dp"/>
    </RelativeLayout>
</RelativeLayout>
